--- a/Praktikum_3/index.html
+++ b/Praktikum_3/index.html
@@ -42,11 +42,6 @@
 
         <div class="Project">
             <h1>Projects</h1>
-            <!-- <ul>
-                <li> <a href="https://scratch.mit.edu/projects/948807316">Projects 1</a> - Create a game in Scratch</li>
-                <li> <a href="https://scratch.mit.edu/projects/910405815">Projects 2</a> - Create a game in Scratch</li>
-                <li> <a href="https://scratch.mit.edu/projects/917557555">Projects 3</a> - Create a animation in Scratch</li>
-            </ul> -->
             <ul id="project-list">
                 <li><a href="https://scratch.mit.edu/projects/948807316" target="_blank">Project 1</a> <button class="edit">Edit</button> <button class="delete">Delete</button></li>
                 <li><a href="https://scratch.mit.edu/projects/910405815" target="_blank">Project 2</a> <button class="edit">Edit</button> <button class="delete">Delete</button></li>
@@ -54,6 +49,14 @@
             </ul>
             <button id="add-project">+</button>
         </div>
+
+        <div class="ToDo">
+            <h1>To-Do List</h1>          
+            <input type="text" id="todo-input" placeholder="Add a new task">
+            <button id="add-todo">Add</button>
+            <ul id="todo-list"></ul>
+        </div>
+        
 
         <div class="Contact">
             <h1>Contact</h1>
